# catgrasp

./: .gitattributes  .gitignore  LICENSE  README.md  SDFGen_license.txt  Utils.py  aligning.py  augmentations.py  build.sh  config.yml  config_grasp.yml  config_nunocs.yml  config_run.yml  data_reader.py  dataset_grasp.py  dataset_nunocs.py  generate_grasp.py  generate_pile_data.py  loss.py  make_canonical.py  make_sdf.py  pointnet2.py  predicter.py  renderer.py  run_grasp_simulation.py  tool.py  train_grasp.py  train_nunocs.py  train_pointgroup.py  trainer_grasp.py  trainer_nunocs.py
PointGroup/: build.sh  trainer_pointgroup.py
PointGroup/config/: config_pointgroup.yaml
PointGroup/data/: dataset_seg.py
PointGroup/util/: config.py  utils.py
dexnet/: __init__.py
dexnet/grasping/: contacts.py  grasp.py  grasp_sampler.py  gripper.py
docker/: run_container.sh
ikfast_pybind/: .bumpversion.cfg  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  __init__.py  pytest.ini  requirements-dev.txt  setup.py  setup_cmake_utils.py  tasks.py
ikfast_pybind/ext/: CMakeLists.txt
ikfast_pybind/src/: CMakeLists.txt
ikfast_pybind/src/kuka_iiwa14/: CMakeLists.txt  ikfast0x1000004a.Transform6D.0_1_3_4_5_6_f2.cpp  ikfast0x1000004a.Transform6D.0_1_3_4_5_6_f2.pp  ikfast_pybind.cpp
my_cpp/: CMakeLists.txt  collision_manager.cpp  collision_manager.h  common.cpp  common.h  pybind.cpp  setup.py
pybullet_env/: camera.py  env.py  env_base.py  env_grasp.py  env_semantic_grasp.py  utils_pybullet.py
(+31 files in other folders)
